# portkodiak-aishield

./: .coverage  CHECKLIST.md  LICENSE  PROJECT_STATUS.md  PROJECT_TREE.md  QUICKSTART.md  README.md  current_test_output.txt  pyproject.toml  run_tests.py  test_log.txt  test_output.txt  traffic_export_20251216_173758.csv
agent/: __init__.py  policy_engine.py  wfp_interface.py  wfp_wrapper.py
app/: __init__.py  config.py
app/common/: __init__.py  crypto.py  database.py  logging.py  models.py
app/core/: action_manager.py
app/service/: __init__.py  main.py
app/ui/: __init__.py  app.py  main_window.py  styles.py
docs/: INDEX.md  developer_guide.md
docs/compliance/: gpl_obligations.md
ml/: __init__.py  inference_engine.py  transformers.py
ml/datasets/: sample_baseline.csv
ml/export/: __init__.py
ml/models/: __init__.py  portkodiak_model.pkl
ml/notebooks/: PortKodiak_Training.ipynb
ml/preprocessing/: __init__.py
scripts/: dev.py  export_data.py  manage_service.py  simulate_traffic.py  train_local.py
tests/: __init__.py  test_alert_generation.py  test_data_collection.py  test_dns_logging.py  test_dns_resolver.py  test_hashing.py  test_inference_engine.py  test_parent_tracking.py  test_policy_engine.py  test_svchost.py  wfp_poc.py
tests/e2e/: run_e2e.py  test_workflow_e2e.py
tests/unit/: test_config.py  test_service.py  test_storage.py  test_ui.py
