[project]
name = "portkodiak-aishield"
version = "0.1.0"
description = "Windows Application Firewall with ML-based Anomaly Detection"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0"}
keywords = ["firewall", "privacy", "security", "ml", "anomaly-detection", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Firewalls",
]

dependencies = [
    # Core Windows APIs
    "pywin32>=305",
    "psutil>=5.9",
    "wmi>=1.5; sys_platform == 'win32'",
    
    # ML & Data Science
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "onnx>=1.14",
    "onnxruntime>=1.15",
    "skl2onnx>=1.15",
    
    # UI Framework
    "PyQt6>=6.5",
    
    # Storage & Serialization
    "pyarrow>=12.0",
    "sqlalchemy>=2.0",
    
    # Security & Encryption
    "cryptography>=41.0",
    
    # Data Validation & Configuration
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    
    # Logging & Monitoring
    "structlog>=23.1",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.11",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.5",
    "pre-commit>=3.4",
    "ipython>=8.15",
    "jupyter>=1.0",
]

[project.scripts]
portkodiak-service = "app.service.main:main"
portkodiak-ui = "app.ui.main_window:main"
portkodiak-dev = "scripts.dev:run_dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "agent", "ml"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.15",
    "jupyter>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov=agent",
    "--cov=ml",
]

[tool.coverage.run]
source = ["app", "agent", "ml"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
